--- a/index.html
+++ b/index.html
@@ -63,5 +63,65 @@
             </p>
         </div>
     </div>
+    <div class="statistics">
+        <div class="left1">
+            <div class="goals">
+                <p class="p7">
+                    GOALS
+                </p>
+                <p class="p8">
+                    23
+                </p>
+            </div>
+            <div class="assists">
+                <p class="p9">
+                    ASSISTS
+                </p>
+                <p class="p10">
+                    14
+                </p>
+            </div>
+            <div class="plus">
+                <p class="p11">
+                    +/-
+                </p>
+                <p class="p12">
+                    4
+                </p>                
+            </div>
+        </div>
+        <div class="right2">
+            <div class="shots">
+                <p class="p13">
+                    SHOTS
+                </p>
+                <p class="p14">
+                    201
+                </p>
+            </div>
+            <div class="blocks">
+                <p class="p15">
+                    BLOCKS
+                </p>
+                <p class="p16">
+                    22
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="stats">
+        <div class="details">
+            <p class="statsdetails">
+                STATS DETAILS
+            </p>
+            <img class="arrow1" src="./images/arrow_down.png" alt="">
+        </div>
+        <div class="history">
+            <p>
+                PLAYER HISTORY
+            </p>
+            <img src="./images/arrow_down.png" alt="">
+        </div>     
+    </div>
 </body>
 </html>
