--- a/index.html
+++ b/index.html
@@ -117,11 +117,53 @@
             <img class="arrow1" src="./images/arrow_down.png" alt="">
         </div>
         <div class="history">
-            <p>
+            <p class="hist">
                 PLAYER HISTORY
             </p>
-            <img src="./images/arrow_down.png" alt="">
+            <img class="arrow2" src="./images/arrow_down.png" alt="">
         </div>     
     </div>
+    <div class="highlights">
+        <p class="high">
+            PHIL HASEK HIGHLIGHTS
+        </p>
+    </div>
+    <div class="cards">
+        <div class="out">
+            <p class="p17">
+                3 min ago
+            </p>
+            <p class="p18">
+                PHIL HASEK IS OUT FOR THE
+            </p>
+            <img class="inj" src="./images/icon_injury.png" alt="">
+        </div>
+        <div class="scored">
+            <p class="p19">
+                3 min ago
+            </p>
+            <p class="p20">
+                PHIL HASEK SCORED A HAT
+            </p>
+            <img class="scor" src="./images/Path 670.png" alt="">
+        </div>
+        <div class="named">
+            <p class="p21">
+                3 min ago
+            </p>
+            <p class="p22">
+                PHIL HASEK IS NAMED PLAYER
+            </p>
+            <img class="award" src="./images/icon_award.png" alt="">
+        </div>
+        <div class="claimed">
+            <p class="p23">
+                3 min ago
+            </p>
+            <p class="p24">
+                PHIL HASEK WAS CLAIMED
+            </p>
+            <img class="tran" src="./images/icon_transaction.png" alt="">
+        </div>
 </body>
 </html>
